# bifrost

./: .gitignore  README.md  pyproject.toml
scripts/: install.sh  uninstall.sh
src/bifrost/: cli.py  main.py
src/bifrost/config/: settings.py
src/bifrost/core/: bifrostengine.py  bridge.py  monitor.py  registry.py
src/bifrost/plugins/: notiflash.py  test.py
