[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost"
version = "0.1.0"
dependencies = [
    "openrgb-python",
]

# This ensures all sub-packages (core, config, plugins) are found automatically
[tool.setuptools.packages.find]
where = ["src"]
include = ["bifrost*"]

[project.scripts]
bifrost = "bifrost.cli:main"